huge quiz improvement, still need styles and UI fixing